@@ -6,6 +6,7 @@
 * Fixed Robot Cleaner not showing throbber when doing work.
 * Fixed Robots allowed duplicate entries.
 * Added more robust API function to use unlimited time for requests (now used for robot cleaning requests).
+* Updated information on add-ons.
 
 = 5.1.0 =
 * WordPress 6.8 compatible.
